--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@headlessui/react": "^2.2.0",
         "@heroicons/react": "^2.2.0",
         "@next/third-parties": "^15.1.3",
+        "@notionhq/client": "^2.2.15",
         "@prisma/client": "^6.2.1",
         "@radix-ui/react-accordion": "^1.2.1",
         "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -61,7 +62,9 @@
         "lucide-react": "^0.456.0",
         "nanoid": "^5.0.8",
         "next": "15.1.3",
+        "next-mdx-remote": "^5.0.0",
         "next-themes": "^0.4.3",
+        "notion-to-md": "^3.1.5",
         "prisma": "^6.1.0",
         "react": "19.0.0",
         "react-chartjs-2": "^5.2.0",
