update environment variables and package dependencies; set NODE_ENV to development, add Notion integration variables, and upgrade React and related packages

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 AUTH_SECRET=
-NODE_ENV=
+NODE_ENV=development
 DATABASE_URL=
 DIRECT_URL=
 SMTP_HOST=smtp.gmail.com
@@ -11,3 +11,5 @@ SMTP_PASSWORD=
 FROM_EMAIL=
 CONTACT_EMAIL=
 CRON_SECRET=
+NOTION_DATABASE_ID=
+NOTION_TOKEN=
