--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "react-fast-marquee": "^1.6.5",
         "react-markdown": "^9.0.1",
         "react-spring": "^9.7.5",
+        "react-top-loading-bar": "^3.0.2",
         "recharts": "^2.13.3",
         "rehype-raw": "^7.0.0",
         "remark-gfm": "^4.0.0",
