--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "@tinymce/tinymce-react": "^5.1.1",
         "@types/bcryptjs": "^2.4.6",
         "@vercel/analytics": "^1.4.1",
+        "@vercel/og": "^0.7.2",
         "bcryptjs": "^2.4.3",
         "chart.js": "^4.4.6",
         "class-variance-authority": "^0.7.0",
