--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,6 @@ SMTP_USER=
 SMTP_PASSWORD=
 FROM_EMAIL=
 CRON_SECRET=
-NOTION_DATABASE_ID=
-NOTION_TOKEN=
+DISCORD_WEBHOOK_URL=
+ADMIN_SECRET=
+NEXT_PUBLIC_ADMIN_SECRET=
