--- a/compose.yml
+++ b/compose.yml
@@ -1,20 +1,49 @@
 services:
-    postgres:
-        image: postgres:16.4-alpine
-        container_name: tabarro3
-        environment:
-            POSTGRES_DB: postgres
-            POSTGRES_USER: postgres
-            POSTGRES_PASSWORD: postgres
+    web:
+        build: .
         ports:
-            - '54322:5432' # host:container
+            - "3000:3000"
+        env_file:
+            - .env
+        environment:
+            - NODE_ENV=production
+            - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+        depends_on:
+            - db
+        networks:
+            - my_network
+
+    db:
+        image: postgres:latest
+        environment:
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_DB: ${POSTGRES_DB}
+        ports:
+            - "5432:5432"
         volumes:
             - postgres_data:/var/lib/postgresql/data
-        healthcheck:
-            test: ['CMD-SHELL', 'pg_isready -U postgres']
-            interval: 5s
-            timeout: 5s
-            retries: 5
+        networks:
+            - my_network
+
+    cron:
+        image: alpine/curl
+        command: >
+            sh -c "
+              echo '0 */2 * * * curl -X GET -H \"Authorization: Bearer \$\${CRON_SECRET}\" http://web:3000/api/jobs/process' > /etc/crontabs/root && \
+              crond -f -l 2
+            "
+        environment:
+            - CRON_SECRET=${CRON_SECRET}
+        depends_on:
+            - web
+        networks:
+            - my_network
 
 volumes:
     postgres_data:
+
+networks:
+    my_network:
+        name: my_network
+        driver: bridge
