--- a/compose.yml
+++ b/compose.yml
@@ -14,7 +14,7 @@ services:
             - my_network
 
     db:
-        image: postgres:latest
+        image: postgres:16
         environment:
             POSTGRES_USER: ${POSTGRES_USER}
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -27,7 +27,7 @@ services:
             - my_network
 
     cron:
-        image: alpine/curl
+        image: docker.io/library/curlimages/curl:8.11.1
         command: >
             sh -c "
               echo '0 */2 * * * curl -X GET -H \"Authorization: Bearer \$\${CRON_SECRET}\" http://web:3000/api/jobs/process' > /etc/crontabs/root && \
