chore: add explicit Docker image name for web service in compose.yml

--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,7 @@
 services:
     web:
         build: .
+        image: localhost/tabarro3ma_web
         ports:
             - "3000:3000"
         env_file:
