--- a/compose.yml
+++ b/compose.yml
@@ -29,9 +29,11 @@ services:
 
     cron:
         image: docker.io/curlimages/curl:8.11.1
+        user: root
         command: >
             sh -c "
               echo '0 */2 * * * curl -X GET -H \"Authorization: Bearer \$\${CRON_SECRET}\" http://web:3000/api/jobs/process' > /etc/crontabs/root && \
+              chmod 600 /etc/crontabs/root && \
               crond -f -l 2
             "
         environment:
