feat: implement daily campaign digest feature and update email templates
- Added a new endpoint for processing daily campaign digests, which will be triggered by a cron job.
- Introduced a new email template for sending campaign digests to participants.
- Replaced immediate campaign notification with digest addition in the campaign creation process.
- Updated various email links to use the correct domain.
- Removed the obsolete nearby campaign email template.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "format": "prettier --write .",
         "db:setup": "tsx scripts/setup.ts",
         "db:migrate": "tsx scripts/migrate.ts",
-        "db:seed": "tsx scripts/seed.ts"
+        "db:seed": "tsx scripts/seed.ts",
+        "db:studio": "prisma studio"
     },
     "dependencies": {
         "@headlessui/react": "^2.2.0",
